# Edo-Tensei

./: .gitattributes  .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.zh-cn.json  package.nls.zh-tw.json  tsconfig.json  tsconfig.test.json  tsconfig.test.ui.json  vitest.config.ts
.github/workflows/: publish.yml  validate.yml
bench/: bench_ts.mjs  gen_fixtures.mjs  run_bench.sh
crates/edo-scanner/: Cargo.toml
crates/edo-scanner/src/: ipc.rs  main.rs  scanner.rs  types.rs
crates/edo-scanner/src/extractors/: claude.rs  codex.rs  copilot.rs  cursor.rs  kiro.rs  mod.rs
docs/: README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md  index.html  llms-full.txt  llms.txt  robots.txt
docs/skills/: README.md  session-antigravity.md  session-claude.md  session-codex.md  session-copilot.md  session-cursor.md  session-kiro.md  session-windsurf.md
i18n/: en.json  ja.json  ko.json  zh-cn.json  zh-tw.json
mcp-server/: README.md  package.json
mcp-server/src/: index.ts  server.ts  types.ts
mcp-server/src/tools/: handoffTools.ts  (+1 more)
skills/edo-tensei/: SKILL.md  session-antigravity.md  session-claude-cowork.md  session-claude.md  session-codex.md  session-copilot.md  session-cursor.md  session-kiro.md  session-trae.md  session-windsurf.md
src/: extension.ts  i18n.ts
src/core/: PathInference.ts  SessionHandoffService.ts  SessionSearchEngine.ts  SkillGenerator.ts  TimeFilter.ts
src/ui/: McpConfigPanel.ts  SessionHandoffProvider.ts
(+46 files in other folders)
