[package]
name = "edo-scanner"
version = "0.1.0"
edition = "2021"
description = "High-performance session scanner sidecar for Edo Tensei"

[[bin]]
name = "edo-scanner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
base64 = "0.22"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
